--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<table cellsacing ="1" border="1" style= "border: 1px solid black"; background-color:Yellow;">
-	<caption style="text-allign:center;" >Student Details</caption>
+<table border="1" style= "background-color:Yellow;">
+	<caption >Student Details</caption>
 	<thead>
 		<tr>
 			<th>NAME</th>
